# yee3

./: AGENTS.md  Info.plist  Info.plist.patch  LICENSE  README.md  SPEC.md  build_on_macOS.command  pyproject.toml  update_info_plist_version.py  yee3.py
.github/workflows/: build.yml
src/yee3/: __main__.py  app.py  image_metadata.py  macos.py  main_macos.py  main_windows.py
src/yee3/resources/: yee3.icns
