[project]
name = "yee3"
version = "0.2.0"
description = "The Minimalist Image Viewer"
authors = [
    {name = "tanaga9", email = "tanaga9@users.noreply.github.com"},
]
dependencies = [
    "PySide6>=6.8.2.1",
    "pyobjc-framework-Cocoa>=11.0; sys_platform == 'darwin'",
    # "pywin32; sys_platform == 'win32'"
    "pillow>=11.1.0",
    "pillow-avif-plugin>=1.4.6"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "briefcase>=0.3.22",
]

[tool.briefcase]
project_name = "Yee 3"
bundle = "com.example"

[tool.briefcase.app.yee3]
formal_name = "Yee 3"
description = "The Minimalist Image Viewer"
long_description = """Sleek and fast.
"""
sources = [
    "src/yee3",
]
icon = "src/yee3/resources/yee3"

[tool.briefcase.app.yee3.macOS]
universal_build = true
requires = [
    "std-nslog~=1.0.3",
]
